2006-10-17  Alan Modra  <amodra@bigpond.net.au>

	* ldlang.c (strip_excluded_output_sections): Do strip sections
	that define syms, but don't ignore them.
	* ld.texinfo (Output Section Discarding): Revise.
	* emultempl/armcoff.em (gld${EMULATION_NAME}_finish): Always call
	finish_default.

2006-10-16  Richard Sandiford  <richard@codesourcery.com>

	* Makefile.am (eelf64bmip.c): Depend on emulparams/elf64bmip-defs.sh.
	(eelf64btsmip.c, eelf64ltsmip.c): Likewise.
	* Makefile.in: Regenerate.
	* emulparams/elf32bmipn32-defs.sh (INITIAL_READONLY_SECTIONS): Include
	.reginfo rather than .MIPS.options.
	* emulparams/elf64bmip-defs.sh: New file.
	* emulparams/elf64bmip.sh: Include it.
	(COMMONPAGESIZE): Delete.
	* emulparams/elf64btsmip.sh: As for elf64bmip.sh.

2006-10-12  Bob Wilson  <bob.wilson@acm.org>

	* emultempl/xtensaelf.em (is_inconsistent_linkonce_section): Check
	for linkonce XCC exception tables (".e" and ".h").

2006-10-11  Bob Wilson  <bob.wilson@acm.org>

	* emulparams/elf32xtensa.sh (TEXT_PLT): Enable.
	(OTHER_READONLY_SECTIONS): Add linkonce .xt_except_table sections.
	(OTHER_READWRITE_SECTIONS): Add linkonce .xt_except_desc sections.
	(OTHER_SDATA_SECTIONS): New.
	* scripttempl/elfxtensa.sc: Import changes from elf.sc.

2006-10-11  Jakub Jelinek  <jakub@redhat.com>

	* ldlang.c (lang_append_dynamic_list): When appending, add all elements
	of the dynamic list rather than just the first entry.

2006-10-10  Bob Wilson  <bob.wilson@acm.org>

	* emulparams/elf32xtensa.sh (GENERATE_PIE_SCRIPT): Enable.

2006-10-06  Mike Frysinger  <vapier@gentoo.org>

	* genscripts.sh: Respect LIBPATH_SUFFIX when not using sysroot.

2006-10-04  Bob Wilson  <bob.wilson@acm.org>

	* emulparams/xtensa-config.sh: Delete file.
	* emulparams/elf32xtensa.sh: Set MAXPAGESIZE here instead of including
	xtensa-config.sh.
	* Makefile.am (eelf32xtensa.c): Remove dependency on xtensa-config.sh.
	* Makefile.in: Regenerate.

2006-10-03  Pedro Alves  <pedro_alves@portugalmail.pt>
